# ocrv1

./: .gitignore  AGENTS.md  ocr  pyproject.toml  r.json  requirements.txt
.claude/: gsd-file-manifest.json
.claude/agents/: gsd-ai-researcher.md  gsd-code-fixer.md  gsd-debug-session-manager.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-intel-updater.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.omc/: project-memory.json
.omc/sessions/: 88ad69e6-480c-43b7-abf9-f0b477419f47.json
.opencode/: gsd-file-manifest.json  opencode.json
.opencode/agents/: gsd-ai-researcher.md  gsd-code-fixer.md  gsd-debug-session-manager.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-intel-updater.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  (+5 more)
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
ocr_ticket.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: benchmark.py  check_env.py  check_ubuntu_compat.py  download_model.py  install_linux.sh  start_server_linux.sh
src/: __init__.py  batch.py  cli.py  exporter.py  parser.py  pipeline.py  preprocessing.py  server.py
tests/: test_batch.py  test_exporter.py  test_parser.py  test_performance.py  test_pipeline.py
(+317 files in other folders)
